<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_label_total_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/fragment_summary_stats_label_total_cases"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_value_total_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_data_question_mark"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_total_cases"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_label_new_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_summary_stats_label_new_cases"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_total_cases" />

    <TextView
        android:id="@+id/tv_value_new_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_data_question_mark"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_new_cases"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_label_total_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_summary_stats_label_total_deaths"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_new_cases" />

    <TextView
        android:id="@+id/tv_value_total_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_data_question_mark"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_total_deaths"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_label_new_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_summary_stats_label_new_deaths"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_total_deaths" />

    <TextView
        android:id="@+id/tv_value_new_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_data_question_mark"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_new_deaths"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_label_total_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_summary_stats_label_total_recovered"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_new_deaths" />

    <TextView
        android:id="@+id/tv_value_total_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_data_question_mark"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_total_recovered"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_label_new_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_summary_stats_label_new_recovered"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_total_recovered" />

    <TextView
        android:id="@+id/tv_value_new_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_data_question_mark"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_new_recovered"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>